--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     container_name: portalmonada
     ports:
       - "8000:8000"
+    volumes:
+      - .:/app
     command: python manage.py runserver 0.0.0.0:8000
     depends_on:
       - db
